# cloudemoticon-rs

./: .gitignore  README.md  auto-imports.d.ts  biome.json  components.d.ts  emoticon-collection.json  emoticon-collection.meta.json  icon.ai  main.html  package.json  pnpm-lock.yaml  selector.html  tsconfig.json  vite.config.ts
.github/workflows/: build.yml
assets/: banner.psd
src/: vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: kbd.vue
src/main/: app.vue  emoticon.ts  main.ts  path.ts  router.ts  store.ts  wretch.ts
src/main/pages/: about.vue  config.vue  editor.vue  emoticon.vue
src/selector/: app.vue
src/types/: global.d.ts
