cargo-features = ["trim-paths", "panic-immediate-abort", "profile-rustflags"]

[package]
name = "cloudemoticon-rs"
version = "0.1.6"
description = "A cloud solution to your favorite emoticons"
authors = ["TransparentLC"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "cloudemoticon_rs_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# 应用程序大小 | Tauri
# https://v2.tauri.app/zh-cn/concept/size/

[profile.dev]
incremental = true
rustflags = ["-Zthreads=8"]

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "immediate-abort"
strip = true
trim-paths = "all"
rustflags = [
    "-Cdebuginfo=0",
    "-Zthreads=8",
    "-Zlocation-detail=none",
    # FIXME:
    # min-sized-rust 推荐添加 -Zfmt-debug=none
    # 但是在 Linux 下编译到 target-lexicon 会报一堆 expected identifier 的错误，不知道怎么回事
    # 根据 https://doc.rust-lang.org/nightly/nightly-rustc/rustc_session/config/enum.FmtDebug.html
    # 改成 shallow 还是能减少一点二进制大小的
    "-Zfmt-debug=shallow",
]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# 移除 dynamic-acl
tauri = { version = "2", features = [
    "common-controls-v6",
    "compression",
    "wry",
    "x11",
    "tray-icon",
], default-features = false }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
enigo = "0.6"
tauri-plugin-clipboard-manager = "2"
# 移除 cookies macos-system-configuration
# 替换 rustls-tls -> native-tls
# 添加 gzip brotli zstd
tauri-plugin-http = { version = "2", features = [
    "charset",
    "http2",
    "native-tls",
    "gzip",
    "brotli",
    "zstd",
], default-features = false }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
notify-rust = "4"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
